Fixing alignment form

--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@
 
 .form-ilustration {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .label-input {
